[gd_scene load_steps=4 format=3 uid="uid://dq42i0kj3sqnq"]

[ext_resource type="Script" path="res://pause_menu.gd" id="1_ig4m4"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_df2yw"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d4q1k"]

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ig4m4")

[node name="Panel" type="Panel" parent="."]
material = SubResource("CanvasItemMaterial_df2yw")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_d4q1k")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -71.0
offset_top = -63.0
offset_right = 71.0
offset_bottom = 63.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 11
alignment = 1

[node name="Resume" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Resume
"

[node name="VolumeLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Volume
"
horizontal_alignment = 1

[node name="VolumeSlider" type="HSlider" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
max_value = 1.0
step = 0.05

[node name="Quit" type="Button" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="PanelContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="drag_ended" from="PanelContainer/VBoxContainer/VolumeSlider" to="." method="_on_volume_slider_drag_ended"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
